--- a/app/dataVisualizationDB/dataVisualization.html
+++ b/app/dataVisualizationDB/dataVisualization.html
@@ -7,24 +7,8 @@
 
 <body>
     <!-- <div> -->
-        <select id="seasons" name="seasons" data-placeholder="Select seasons" multiple data-multi-select>
-            <option value="Apple">Apple</option>
-            <option value="Banana">Banana</option>
-            <option value="Blackberry">Blackberry</option>
-            <option value="Blueberry">Blueberry</option>
-            <option value="Cherry">Cherry</option>
-            <option value="Cranberry">Cranberry</option>
-            <option value="Grapes">Grapes</option>
-            <option value="Kiwi">Kiwi</option>
-            <option value="Mango">Mango</option>
-            <option value="Orange">Orange</option>
-            <option value="Peach">Peach</option>
-            <option value="Pear">Pear</option>
-            <option value="Pineapple">Pineapple</option>
-            <option value="Raspberry">Raspberry</option>
-            <option value="Strawberry">Strawberry</option>
-            <option value="Watermelon">Watermelon</option>
-        </select>
+        <select id="seasons" name="seasons" data-placeholder="Select seasons" multiple data-multi-select></select>
+        <button id="loadRunsBySeasons" >Filter anwenden</button>
         <input type="text" id="filterInput" placeholder="'1'!nl&'2'false">
 
     <!-- </div> -->
